src/Tests/Error/TypeNumericError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeNumericError extends AssertError
{
}
